merge with jdk 11 branch