@@ -5,8 +5,8 @@
 
     <parent>
         <groupId>com.bucket4j</groupId>
+        <artifactId>bucket4j_jdk8-parent</artifactId>
         <version>8.0.1</version>
-        <artifactId>bucket4j-parent</artifactId>
         <relativePath>../bucket4j-parent</relativePath>
     </parent>
 
@@ -18,13 +18,13 @@
         <kotlin.version>1.4.0</kotlin.version>
         <lincheck.version>2.14.1</lincheck.version>
         <asm.version>9.0</asm.version>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>lincheck-tests</artifactId>
+    <artifactId>lincheck_jdk8-tests</artifactId>
 
     <build>
 <!--        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>-->
@@ -62,8 +62,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.5.1</version>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <source>8</source>
+                    <target>8</target>
                 </configuration>
                 <executions>
                     <!-- Replacing default-compile as it is treated specially by maven -->
@@ -88,25 +88,18 @@
                     </execution>
                 </executions>
             </plugin>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
-                <configuration>
-                    <argLine>--add-opens java.base/jdk.internal.misc=ALL-UNNAMED --add-exports java.base/jdk.internal.util=ALL-UNNAMED</argLine>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
 
     <dependencies>
         <dependency>
             <groupId>com.bucket4j</groupId>
-            <artifactId>bucket4j-core</artifactId>
+            <artifactId>bucket4j_jdk8-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>com.bucket4j</groupId>
-            <artifactId>bucket4j-core</artifactId>
+            <artifactId>bucket4j_jdk8-core</artifactId>
             <version>${project.version}</version>
             <type>test-jar</type>
             <scope>test</scope>
